# mwx

./: .gitignore  LICENSE  README-ES.md  README.md  playground.py  pyproject.toml
mwx/: __init__.py  _frames_legacy.py  _legacy_model.py  etl.py  frames.py  model.py  util.py  wallet.py
mwx/etl/: __init__.py  common.py  read.py  write.py
mwx/etl/excel/: __init__.py  write.py
mwx/util/: __init__.py  daterange.py  find.py  frames.py  money.py
tests/: Jun_30_2025_ExpensoDB  Sep_10_2025_ExpensoDB  TestReport.csv  test_01_util.py  test_02_daterange.py  test_11_datamodel.py  test_12_write.py  test_13_wallet_find.py  test_13_wallet_get.py
