[project]
name = "mwx"
version = "0.1.0"
description = "QoL tool for MyWallet Android app"
readme = "README-ES.md"
license = { text = "MIT" }
authors = [
    { name = "Ãngel Moreno Prieto", email = "angelmorenoprieto@gmail.com" },
]
requires-python = ">=3.12"
dependencies = [
    "openpyxl>=3.1.5",
    "python-dateutil>=2.9.0.post0",
]

[dependency-groups]
dev = ["black>=25.1.0", "pytest>=8.4.1", "ruff>=0.12.9"]

[tool.ruff.lint]
ignore = ["F401"]
