[project]
name = "mwx"
version = "0.1.1"
description = "Python toolkit for inspecting and manipulating MyWallet Android backup databases"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Ãngel Moreno Prieto", email = "angelmorenoprieto@gmail.com" },
]
requires-python = ">=3.12"
dependencies = ["openpyxl>=3.1.5", "python-dateutil>=2.9.0.post0"]

urls = { Repository = "https://github.com/angmorpri/mwx", Issues = "https://github.com/angmorpri/mwx/issues" }

classifiers = [
    "Private :: Do Not Upload",
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

[dependency-groups]
dev = ["black>=25.1.0", "pytest>=8.4.1", "ruff>=0.12.9"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
